--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
  <div class="user-details">
   <h1> About Me </h1>
-  <p> {{site.user_description}} </p>
+  <p> Hello, everyone. I am Sanghyun Kim in Dyros Lab at Seoul National University which is working on control and planning of both humanoid and mobile manipulator. My main interest topic is as follows </p>
 </div>
   <div class="user">
     <div class="tech">
