--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,15 @@
  <div class="user-details">
   <h1> About Me </h1>
-  <p> Hello, everyone. I am Sanghyun Kim in Dyros Lab at Seoul National University which is working on control and planning of both humanoid and mobile manipulator. My main interest topic is as follows </p>
+  <p>Hello, Everyone</p>
+  <p>I am Sanghyun Kim in <a href="https://www.dyros.snu.ac.kr">Dyros Lab</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
+  <p>My interest areas is as follows.</p>
+  <ul style="list-style-type: circle;">
+  <li>Optimal Control</li>
+  <li>Trajectory Optimization</li>
+  <li>Humanoid Robot</li>
+  <li>Mobile Manipulator</li>
+  <li>Robot Hand Control</li>
+  </ul>
 </div>
   <div class="user">
     <div class="tech">
