--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,14 +1,14 @@
  <div class="user-details">
   <h1> About Me </h1>
-  <p>Hello, Everyone</p>
-  <p>I am Sanghyun Kim in <a href="https://www.dyros.snu.ac.kr">Dyros Lab</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
-  <p>My interest areas is as follows.</p>
+  <p style="text-align: left;">Hello, Everyone</p>
+  <p style="text-align: left;">I am Sanghyun Kim in <a href="https://www.dyros.snu.ac.kr">Dyros Lab</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
+  <p style="text-align: left;">My interest areas is as follows.</p>
   <ul style="list-style-type: circle;">
-  <li>Optimal Control</li>
-  <li>Trajectory Optimization</li>
-  <li>Humanoid Robot</li>
-  <li>Mobile Manipulator</li>
-  <li>Robot Hand Control</li>
+  <li style="text-align: left;">Optimal Control</li>
+  <li style="text-align: left;">Trajectory Optimization</li>
+  <li style="text-align: left;">Humanoid Robot</li>
+  <li style="text-align: left;">Mobile Manipulator</li>
+  <li style="text-align: left;">Robot Hand Control</li>
   </ul>
 </div>
   <div class="user">
