--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
  <div class="user-details">
   <h1> About Me </h1>
   <p style="text-align: left;">Hello, Everyone</p>
-  <p style="text-align: left;">I am Sanghyun Kim in <a href="https://www.dyros.snu.ac.kr">Dyros Lab</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
+  <p style="text-align: left;">I am Sanghyun Kim in <a href="https://www.dyros.snu.ac.kr">Dyros Lab (Prof. Jaeheung Park)</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
   <p style="text-align: left;">My interest areas is as follows.</p>
   <ul style="list-style-type: circle;">
   <li style="text-align: left;">Optimal Control</li>
@@ -13,12 +13,15 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
+      <h2>Education</h2>
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <ul style="list-style-type: circle;">
+      <li><strong>2005-2012</strong> B.S.&nbsp;<br />: Mechanical and Aerospace Engineering, Seoul National University</li>
+      <li><strong>2012-Current</strong> Ph.d. Candidate&nbsp;<br />: Dyros Lab, Seoul National University</li>
+      <li><strong>2018-Current</strong> Visiting Researcher&nbsp;<br />: Gepetto Team, CNRS-LAAS</li>
+      </ul>
     </div>
     <div class="tech">
       <h2>Code</h2>
