--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,10 +18,8 @@
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
       <ul style="list-style-type: circle;">
-      <li><strong>2005-2012</strong> B.S.&nbsp;<br />: Mechanical and Aerospace Engineering, Seoul National University</li>
-      <li><strong>2012-Current</strong> Ph.d. Candidate&nbsp;<br />: Dyros Lab, Seoul National University</li>
-      <li><strong>2018-Current</strong> Visiting Researcher&nbsp;<br />: Gepetto Team, CNRS-LAAS</li>
-      </ul>
+      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
+        Vinyl XOXO lumbersexual</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
