--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
  <div class="user-details">
   <h1> About Me </h1>
   <p style="text-align: left;">Hello, Everyone</p>
-  <p style="text-align: left;">I am Sanghyun Kim in <a href="https://www.dyros.snu.ac.kr">Dyros Lab (Prof. Jaeheung Park)</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
+  <p style="text-align: left;">I am Sanghyun Kim in <a href="http://dyros.snu.ac.kr">Dyros Lab (Prof. Jaeheung Park)</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
   <p style="text-align: left;">My interest areas is as follows.</p>
   <ul style="list-style-type: circle;">
   <li style="text-align: left;">Optimal Control</li>
