--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,9 +17,7 @@
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <ul style="list-style-type: circle;">
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>2005-2012 B.S. Mechanical and Aerospace Engineering, Seoul National University</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
