--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,9 +17,9 @@
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>2005-2012 B.S. Mechanical and Aerospace Engineering, Seoul National University</p>
-	<p>2012-Current Ph.D. <a href="http://dyros.snu.ac.kr">Dyros Lab (Prof. Jaeheung Park)</a>, Seoul National University</p>
-	<p>2018-Current Visiting Researcher <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, CNRS-LAAS</p>	
+      <p><strong>2005-2012 B.S.<br /></strong> Mechanical and Aerospace Engineering, Seoul National University</p>
+	<p><strong>2012-Current Ph.D.<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab (Prof. Jaeheung Park)</a>, Seoul National University</p>
+	<p><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, CNRS-LAAS</p>	
     </div>
     <div class="tech">
       <h2>Code</h2>
