--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,20 +14,19 @@
   <div class="user">
     <div class="tech">
       <h2>Education</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
       <p><strong>2005-2012 B.S.<br /></strong> Mechanical and Aerospace Engineering, Seoul National University</p>
-	<p><strong>2012-Current Ph.D.<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab (Prof. Jaeheung Park)</a>, Seoul National University</p>
+	<p><strong>2012-Current Ph.D.<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
 	<p><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, CNRS-LAAS</p>	
     </div>
     <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>Skills</h2>
+      <i class="devicon-cplusplus-plain colored"></i>
+      <i class="devicon-python-plain colored"></i>
+      <p> Programming: C++, Python, Matlab, etc</p>
+      <p> Simulator: V-Rep, Gazebo, Pinocchio, etc</p>  
+      <p> Library: Eigen, FCL, IPOPT, qpOASES, etc</p>  
+      <p> Others: Latex, Git, ROS, etc</p>  
+        
     </div>
     <div class="tech">
       <h2>Tools</h2>
