--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,18 +14,18 @@
   <div class="user">
     <div class="tech">
       <h2>Education</h2>
-      <p><strong>2005-2012 B.S.<br /></strong> Mechanical and Aerospace Engineering, Seoul National University</p>
-	<p><strong>2012-Current Ph.D.<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
-	<p><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, CNRS-LAAS</p>	
+      <p style="text-align: left;"><strong>2005-2012 B.S.<br /></strong> Mechanical and Aerospace Engineering, Seoul National University</p>
+	<p style="text-align: left;"><strong>2012-Current Ph.D.<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
+	<p style="text-align: left;"><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, CNRS-LAAS</p>	
     </div>
     <div class="tech">
       <h2>Skills</h2>
       <i class="devicon-cplusplus-plain colored"></i>
       <i class="devicon-python-plain colored"></i>
-      <p> Programming: C++, Python, Matlab, etc</p>
-      <p> Simulator: V-Rep, Gazebo, Pinocchio, etc</p>  
-      <p> Library: Eigen, FCL, IPOPT, qpOASES, etc</p>  
-      <p> Others: Latex, Git, ROS, etc</p>  
+      <p style="text-align: left;"> Programming: C++, Python, Matlab, etc</p>
+      <p style="text-align: left;"> Simulator: V-Rep, Gazebo, Pinocchio, etc</p>  
+      <p style="text-align: left;"> Library: Eigen, FCL, IPOPT, qpOASES, etc</p>  
+      <p style="text-align: left;"> Others: Latex, Git, ROS, etc</p>  
         
     </div>
     <div class="tech">
