--- a/_includes/about.html
+++ b/_includes/about.html
@@ -26,13 +26,9 @@
       <p style="text-align: left;"> Simulator: V-Rep, Gazebo, Pinocchio, etc</p>  
       <p style="text-align: left;"> Library: Eigen, FCL, IPOPT, qpOASES, etc</p>  
       <p style="text-align: left;"> Others: Latex, Git, ROS, etc</p>  
-        
     </div>
     <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
+      <h2>Prize</h2>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
