--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,10 +22,10 @@
       <h2>Skills</h2>
       <i class="devicon-cplusplus-plain colored"></i>
       <i class="devicon-python-plain colored"></i>
-      <p style="text-align: left;"> Programming: C++, Python, Matlab, etc</p>
-      <p style="text-align: left;"> Simulator: V-Rep, Gazebo, Pinocchio, etc</p>  
-      <p style="text-align: left;"> Library: Eigen, FCL, IPOPT, qpOASES, etc</p>  
-      <p style="text-align: left;"> Others: Latex, Git, ROS, etc</p>  
+      <p style="text-align: left;"> <strong>Programming:</strong> C++, Python, Matlab, etc</p>
+      <p style="text-align: left;"> <strong>Simulator:</strong> V-Rep, Gazebo, Pinocchio, etc</p>  
+      <p style="text-align: left;"> <strong>Library:</strong> Eigen, FCL, IPOPT, qpOASES, etc</p>  
+      <p style="text-align: left;"> <strong>Others:</strong> Latex, Git, ROS, etc</p>  
     </div>
     <div class="tech">
       <h2>Prize</h2>
