--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,12 +24,13 @@
       <i class="devicon-python-plain colored"></i>
       <p style="text-align: left;"> <strong>Programming:</strong> C++, Python, Matlab, etc</p>
       <p style="text-align: left;"> <strong>Simulator:</strong> V-Rep, Gazebo, Pinocchio, etc</p>  
-      <p style="text-align: left;"> <strong>Library:</strong> Eigen, FCL, IPOPT, qpOASES, etc</p>  
+      <p style="text-align: left;"> <strong>Library:</strong> Eigen, FCL, IPOPT, qpOASES, RBDL, etc</p>  
       <p style="text-align: left;"> <strong>Others:</strong> Latex, Git, ROS, etc</p>  
     </div>
     <div class="tech">
-      <h2>Prize</h2>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>Honors</h2>
+      <p><strong> Cum laude </strong> from Dept. of Mechanical Engineering at Seoul National University, 2012</p>
+      <p><strong> Best paper award </strong> in Jounal of Korea Robotics Society, 2018</p>
+      <p><strong> Korean Government Grant </strong> for Visiting Scholar of CNRS-LAAS, 2018</p>
     </div>
 </div>
