--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,7 +19,7 @@
 	<p style="text-align: left;"><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, CNRS-LAAS</p>	
     </div>
     <div class="tech">
-      <h2>Skills</h2>
+      <h2>Technical Skills</h2>
       <i class="devicon-cplusplus-plain colored"></i>
       <i class="devicon-python-plain colored"></i>
       <p style="text-align: left;"> <strong>Programming:</strong> C++, Python, Matlab, etc</p>
@@ -29,8 +29,8 @@
     </div>
     <div class="tech">
       <h2>Honors</h2>
-      <p><strong> Cum laude </strong> from Dept. of Mechanical Engineering at Seoul National University, 2012</p>
-      <p><strong> Best paper award </strong> in Jounal of Korea Robotics Society, 2018</p>
-      <p><strong> Korean Government Grant </strong> for Visiting Scholar of CNRS-LAAS, 2018</p>
+      <p style="text-align: left;"><strong> Cum laude </strong> from Dept. of Mechanical Engineering at Seoul National University, 2012</p>
+      <p style="text-align: left;"><strong> Best paper award </strong> in Jounal of Korea Robotics Society, 2018</p>
+      <p style="text-align: left;"><strong> Korean Government Grant </strong> for Visiting Scholar of CNRS-LAAS, 2018</p>
     </div>
 </div>
