--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
     <div class="tech">
       <h2>Education & Experience</h2>
       <p style="text-align: left;"><strong>2005-2012 B.S.<br /></strong> Mechanical and Aerospace Engineering, Seoul National University</p>
-      <p style="text-align: left;"><strong>2010-2010 Intern <br /></strong> Gwangju Institute of Science and Technology</p>
+      <p style="text-align: left;"><strong>2010-2010 Intern <br /></strong> <a href="http://haptics.gist.ac.kr">Human Robotics Lab</a> Gwangju Institute of Science and Technology</p>
 	<p style="text-align: left;"><strong>2012-Current Ph.D.<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
 	<p style="text-align: left;"><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, CNRS-LAAS</p>	
     </div>
