--- a/_includes/about.html
+++ b/_includes/about.html
@@ -21,7 +21,7 @@
     </div>
     <div class="tech">
       <h2>Technical Skills</h2>
-      <p style="text-align: left;"> <strong>Programming:</strong> C++, Python, Matlab, etc</p>
+      <p style="text-align: left;"> <strong>Programming:</strong> C, C++, Python, Matlab, etc</p>
       <p style="text-align: left;"> <strong>Simulator:</strong> V-Rep, Gazebo, Pinocchio, etc</p>  
       <p style="text-align: left;"> <strong>Library:</strong> Eigen, FCL, IPOPT, qpOASES, RBDL, etc</p>  
       <p style="text-align: left;"> <strong>Others:</strong> Latex, Git, ROS, etc</p>  
