--- a/_includes/about.html
+++ b/_includes/about.html
@@ -27,7 +27,7 @@
       <p style="text-align: left;"> <strong>Others:</strong> Latex, Git, ROS, etc</p>  
     </div>
     <div class="tech">
-      <h2>Honors</h2>
+      <h2>Honors & Awards</h2>
       <p style="text-align: left;"><strong> Cum laude </strong> from Dept. of Mechanical Engineering at Seoul National University, 2012</p>
       <p style="text-align: left;"><strong> Best paper award </strong> in Jounal of Korea Robotics Society, 2018</p>
       <p style="text-align: left;"><strong> Korean Government Grant </strong> for Visiting Scholar of CNRS-LAAS, 2018</p>
