--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,19 +17,16 @@
       <p style="text-align: left;"><strong>2005-2012 B.S.<br /></strong> Mechanical and Aerospace Engineering, Seoul National University</p>
       <p style="text-align: left;"><strong>2010-2010 Intern <br /></strong> <a href="http://haptics.gist.ac.kr">Human Robotics Lab</a> Gwangju Institute of Science and Technology</p>
 	<p style="text-align: left;"><strong>2012-Current Ph.D.<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
-	<p style="text-align: left;"><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, CNRS-LAAS</p>	
-    </div>
+	<p style="text-align: left;"><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, CNRS-LAAS</p></div>
     <div class="tech">
       <h2>Technical Skills</h2>
       <p style="text-align: left;"> <strong>Programming:</strong> C, C++, Python, Matlab, etc</p>
       <p style="text-align: left;"> <strong>Simulator:</strong> V-Rep, Gazebo, Pinocchio, etc</p>  
       <p style="text-align: left;"> <strong>Library:</strong> Eigen, FCL, IPOPT, qpOASES, RBDL, etc</p>  
-      <p style="text-align: left;"> <strong>Others:</strong> Latex, Git, ROS, etc</p>  
-    </div>
+      <p style="text-align: left;"> <strong>Others:</strong> Latex, Git, ROS, etc</p></div>
     <div class="tech">
       <h2>Honors & Awards</h2>
       <p style="text-align: left;"><strong> Cum laude </strong> from Dept. of Mechanical Engineering at Seoul National University, 2012</p>
       <p style="text-align: left;"><strong> Best paper award </strong> in Jounal of Korea Robotics Society, 2018</p>
-      <p style="text-align: left;"><strong> Korean Government Grant </strong> for Visiting Scholar of CNRS-LAAS, 2018</p>
-    </div>
+      <p style="text-align: left;"><strong> Korean Government Grant </strong> for Visiting Scholar of CNRS-LAAS, 2018</p></div>
 </div>
