--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,8 @@
  <div class="user-details">
   <h1> About Me </h1>
-  <p style="text-align: left;">Hello, Everyone</p>
+  <p style="text-align: left;">Hello, Everyone.</p>
   <p style="text-align: left;">I am Sanghyun Kim in <a href="http://dyros.snu.ac.kr">Dyros Lab (Prof. Jaeheung Park)</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
+  <p style="text-align: left;"> From 08.2018 to 06.2019, I have been a visiting researcher in <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>(LAAS-CNRS, Toulouse), where I have been working with <a href="http://homepages.laas.fr/nmansard">Nicolas Mansard</a>, <a href="http://stevetonneau.fr">Steve Tonneau</a>, <a href="http://pfernbach.github.io">Pierre Fernbach</a>, <a href="http://cmastalli.github.io">Carlos Mastalli</a>.</p>
   <p style="text-align: left;">My interest areas is as follows.</p>
   <ul style="list-style-type: circle;">
   <li style="text-align: left;">Optimal Control</li>
@@ -17,7 +18,7 @@
       <p style="text-align: left;"><strong>2005-2012 B.S.<br /></strong> Mechanical and Aerospace Engineering, Seoul National University</p>
       <p style="text-align: left;"><strong>2010-2010 Intern <br /></strong> <a href="http://haptics.gist.ac.kr">Human Robotics Lab</a> Gwangju Institute of Science and Technology</p>
 	<p style="text-align: left;"><strong>2012-Current Ph.D.<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
-	<p style="text-align: left;"><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, CNRS-LAAS</p></div>
+	<p style="text-align: left;"><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, LAAS-CNRS</p></div>
     <div class="tech">
       <h2>Technical Skills</h2>
       <p style="text-align: left;"> <strong>Programming:</strong> C, C++, Python, Matlab, etc</p>
@@ -26,6 +27,7 @@
       <p style="text-align: left;"> <strong>Others:</strong> Latex, Git, ROS, etc</p></div>
     <div class="tech">
       <h2>Honors & Awards</h2>
+      <p style="text-align: left;"><strong> Scholarship </strong> Full and Half Scholarship at Seoul National University, 2007-2014</p>      
       <p style="text-align: left;"><strong> Cum laude </strong> from Dept. of Mechanical Engineering at Seoul National University, 2012</p>
       <p style="text-align: left;"><strong> Best paper award </strong> in Jounal of Korea Robotics Society, 2018</p>
       <p style="text-align: left;"><strong> Korean Government Grant </strong> for Visiting Scholar of CNRS-LAAS, 2018</p></div>
