--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,14 +11,15 @@
   <li style="text-align: left;">Mobile Manipulator</li>
   <li style="text-align: left;">Robot Hand Control</li>
   </ul>
+  <p style="text-align: left;">In this website, you can find my projects, publications, videos, and source codes.</p>
 </div>
   <div class="user">
     <div class="tech">
       <h2>Education & Experience</h2>
       <p style="text-align: left;"><strong>2005-2012 B.S.<br /></strong> Mechanical and Aerospace Engineering, Seoul National University</p>
       <p style="text-align: left;"><strong>2010-2010 Intern <br /></strong> <a href="http://haptics.gist.ac.kr">Human Robotics Lab</a> Gwangju Institute of Science and Technology</p>
-	<p style="text-align: left;"><strong>2012-Current Ph.D.<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
-	<p style="text-align: left;"><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, LAAS-CNRS</p></div>
+      <p style="text-align: left;"><strong>2012-Current Ph.D.<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
+      <p style="text-align: left;"><strong>2018-Current Visiting Researcher<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, LAAS-CNRS</p></div>
     <div class="tech">
       <h2>Technical Skills</h2>
       <p style="text-align: left;"> <strong>Programming:</strong> C, C++, Python, Matlab, etc</p>
