--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -13,6 +13,17 @@
   justify-content: space-between;
   list-style: none;
 }
+.tech:before{
+  display: inline-block;
+  witdh: 1px;
+  content: '';
+}
+.tech:after{
+  display: inline-block;
+  witdh: 1px;
+  content: '';
+}
+
 
 .user {
   text-align: center;
