--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -15,12 +15,12 @@
 }
 .tech:before{
   display: inline-block;
-  witdh: 1px;
+  width: 1px;
   content: '';
 }
 .tech:after{
   display: inline-block;
-  witdh: 1px;
+  width: 1px;
   content: '';
 }
 
