--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="ggory15@snu.ac.kr"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="Send email" href="mailto:ggory15@snu.ac.kr"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Linkedin" target="_blank" href="https://www.linkedin.com/in/sanghyun-kim-5b3222104"><i class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
 
         <a aria-label="My Google Scholar" target="_blank" href="https://scholar.google.com/citations?user=OAMAACIAAAAJ"><i class="icon fa fa-google" aria-hidden="true"></i></a>
