--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -25,10 +25,11 @@ h2 {
 }
 h3 {
     font-size: 1.5rem;
+    font-weight: bold;
 }
 h4 {
     font-size: 1rem;
-    font-weight: bold
+    font-weight: bold;
 }
 ul, ol {
     margin: 1em 0;
