--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
   <p style="text-align: left;">I am Sanghyun Kim in <a href="http://dyros.snu.ac.kr">Dyros Lab (Prof. Jaeheung Park)</a> at Seoul National University which is working on control and planning of both humanoid and mobile manipulator.&nbsp;</p>
   <p style="text-align: left;"> At 2015, I and my collegues participated in DARPA Robotics Challenge Finals 2015 (DRC Finals 2015) as <a href="http://dyros.snu.ac.kr/drc-comp/">Team SNU</a> and I was studnet leader of our team. My main role was to manage whole framework of robot and developed the upper-body and lower-body position controller.</p>
   <p style="text-align: left;"> From 2018 to 2019, I have been a visiting researcher in <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a> (LAAS-CNRS, Toulouse), where I have been working with <a href="http://homepages.laas.fr/nmansard">Nicolas Mansard</a>, <a href="http://stevetonneau.fr">Steve Tonneau</a>, <a href="http://pfernbach.github.io">Pierre Fernbach</a>, and <a href="http://cmastalli.github.io">Carlos Mastalli</a>.</p>
-  <p style="text-align: left;">My interest areas is as follows.</p>
+  <p style="text-align: left;">My interest areas are as follows.</p>
   <ul style="list-style-type: circle;">
   <li style="text-align: left;">Optimal Control</li>
   <li style="text-align: left;">Trajectory Optimization</li>
