--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,11 +12,12 @@
         <a aria-label="My Github" target="_blank" href="https://github.com/ggory15"><i class="icon fa fa-github" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
-        <a class="link" href="#about" data-scroll>About Me</a>
-	      <a class="link" href="#projects-featured" data-scroll>Projects</a>
-        <a class="link" href="#posts-recent" data-scroll>Publications</a>
+        <a class="link" href="#about" data-scroll><strong>About Me</strong></a>
+	      <a class="link" href="#projects-featured" data-scroll><strong>Projects</strong></a>
+        <a class="link" href="#posts-recent" data-scroll><strong>Publications</strong></a>
         <!-- <a class="link" href="#projects" data-scroll>Softwares</a> -->
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 </div>
+
