--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,7 @@
  <div class="user-details">
-  <h1> About Me </h1>
+  <div class="home-title">
+    <h1> About Me </h1>
+  </div>
 </div>
 <div class="user">
   <div class="introduce">
@@ -16,19 +18,25 @@
 
 <div class="user">
   <div class="tech">
-    <h3>Education </h2>
+    <div class="home-title">
+      <h3>Education </h3>
+    </div>
     <p style="text-align: left;"><strong>2005-2012 B.S.<br /></strong> Mechanical and Aerospace Engineering, Seoul National University</p>
     <p style="text-align: left;"><strong>2010-2010 Student Internship <br /></strong> <a href="http://haptics.gist.ac.kr">Human Robotics Lab</a> Gwangju Institute of Science and Technology</p>
     <p style="text-align: left;"><strong>2012-Current Ph.D Candidate<br /></strong> <a href="http://dyros.snu.ac.kr">Dyros Lab</a>, Seoul National University</p>
     <p style="text-align: left;"><strong>2018-Current Visiting Scholar<br /></strong> <a href="http://projects.laas.fr/gepetto/">Gepetto Team</a>, LAAS-CNRS</p></div>
   <div class="tech">
-    <h3>Technical Skills</h2>
+    <div class="home-title">
+      <h3>Skills </h3>
+    </div>
     <p style="text-align: left;"> <strong>Programming:</strong> C, C++, Python, Matlab, etc</p>
     <p style="text-align: left;"> <strong>Simulator:</strong> V-Rep, RLab, Gazebo, Pinocchio, etc</p>  
     <p style="text-align: left;"> <strong>Library:</strong> Eigen, FCL, IPOPT (IFOPT), qpOASES, RBDL, etc</p>  
     <p style="text-align: left;"> <strong>Others:</strong> Latex, GIT, ROS, etc</p></div>
   <div class="tech">
-    <h3>Honors & Awards</h2>
+    <div class="home-title">
+      <h3>Honors & Awards </h3>
+    </div>
     <p style="text-align: left;"><strong> Scholarship </strong> Full and Half Scholarship for academic excellence at Seoul National University, 2007-2014</p>      
     <p style="text-align: left;"><strong> Cum Laude </strong> from Dept. of Mechanical Engineering at Seoul National University, 2012</p>
     <p style="text-align: left;"><strong> Best Paper Award </strong> in Jounal of Korea Robotics Society, 2018</p>
