--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -13,7 +13,7 @@ layout: page
       <div class="six columns">
           <section id="projects-featured">
               <div class="home-title">
-                  <h3>Featured Projects</h3>
+                  <h3>Recent Projects</h3>
               </div>
               {% include displays/projects-flexslider.html %}
               <p class="button-style"><a href="{{ site.url }}/projects">See All Projects</a></p>
@@ -24,7 +24,7 @@ layout: page
       <div class="six columns">
           <section id="posts-recent">
               <div class="home-title">
-                  <h3>Publications</h3>
+                  <h3>Recent Publications</h3>
               </div>
               {% include displays/posts-flexslider.html %}
               <p class="button-style"><a href="{{ site.url }}/publications">See All Publications</a></p>
