--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,8 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 	<!-- Flexslider Library  -->
 	<script src="/assets/js/flexslider/jquery.flexslider-min.js"></script>
+	<script src="/assets/js/froogaloop.js"></script>
+	<script src="/assets/js/jquery.fitvid.js"></script>
 	<!-- Initialisation Code  -->
 	<script src="/assets/js/app.js"></script>
 
