--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,13 +13,13 @@ layout: default
 	<div class="six columns post-layout-header-info">
 
 		<!-- General Info -->
-		<h1>{{ page.title }}</h1>
-		<p>{{ page.excerpt }}</p>
-		<p>{{ page.author }}</p>
-		<p><time datetime="{{ page.date | date: "%-d %b %y" }}">{{ page.date | date: "%-d %b %y" }}</time></p>
+		<h1><span style="color: #ffffff;">{{ page.title }}</span></h1>
+		<p><strong>{{ page.excerpt }}</strong></p>
+		<p><strong>{{ page.author }}</strong></p>
+		<p><strong><time datetime="{{ page.date | date: "%-d %b %y" }}">{{ page.date | date: "%-d %b %y" }}</time></strong></p>
 
 		<!-- Tags -->
-		<p>Tags:
+		<p><strong>Tags:
 		{% for category in page.categories %}
 		{{ category }}
 		{% endfor %}
@@ -27,16 +27,17 @@ layout: default
 		{% for tag in page.tags %}
 		{{ tag }}
 		{% endfor %}
+		</strong>
 		</p>
 
 		<!-- Github Link -->
 		{% if page.github %}
-		<p class="button-style-post"><a href="{{ page.github }}">GitHub <i class="icon fa fa-github-square" aria-hidden="true"></i></a></p>
+		<p class="button-style-post"><a href="{{ page.github }}"><strong>GitHub </strong><i class="icon fa fa-github-square" aria-hidden="true"></i></a></p>
 		{% endif %}
 
 		<!-- External Website -->
 		{% if page.external-website %}
-		<p class="button-style-post"><a href="{{ page.external-website }}">Website <i class="icon fa fa-external-link" aria-hidden="true"></i></a></p>
+		<p class="button-style-post"><a href="{{ page.external-website }}"><strong>Website</strong> <i class="icon fa fa-external-link" aria-hidden="true"></i></a></p>
 		{% endif %}
 	</div>
 </div>
