--- a/_includes/displays/posts-basic-tags.html
+++ b/_includes/displays/posts-basic-tags.html
@@ -7,33 +7,55 @@
 
 
  <div class="container">
-
-		{% for tag in site.tags %}
-			{% assign tag_name = tag | first %}
-			{% assign posts = tag | last %}
-
+		<h3> International Journal </h3>
+		{% for page in site.categories.publications %}
+		{% if page.type == "International_journal" %}
 			<div class="post-display">
-				<h2 id="{{ tag_name | slugify }}">{{ tag_name }}</h2>
+				<h6 id="{{ tag_name | slugify }}">{{page.author}}, <em>{{ page.title }}</em>, {{page.name}}, {{page.year}} <strong>{{page.state}}</strong></h6>
 			</div>
-
-			<ul class="post-display">
-				{% for post in site.posts %}
-				{% if post.tags contains tag_name %}
-				{% if post.categories contains "publications" %}
-			    <li class="row">
-			      	<div class="six columns">
-			    	 	<h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-			    	 	<p>{{ post.excerpt }}</p>
-			      	</div>
-
-			      	<div class="six columns">
-			        	<img alt="{{ post.imageAlt }}" src="{{ site.url }}{{ post.image-slider }}">
-			      	</div>
-			    </li>
-			    {% endif %}
-			    {% endif %}
-				{% endfor %}
-			</ul>
-
+		{% endif %}
 		{% endfor %}
+		<h3> International Conference </h3>
+		{% for page in site.categories.publications %}
+		{% if page.type == "International_confernece" %}
+			<div class="post-display">
+				<h6 id="{{ tag_name | slugify }}">{{page.author}}, <em>{{ page.title }}</em>, {{page.name}}, {{page.year}} <strong>{{page.state}}</strong></h6>
+			</div>
+		{% endif %}
+		{% endfor %}	
+		<h3> Domestic Journal </h3>
+		{% for page in site.categories.publications %}
+		{% if page.type == "Domestic_journal" %}
+			<div class="post-display">
+				<h6 id="{{ tag_name | slugify }}">{{page.author}}, <em>{{ page.title }}</em>, {{page.name}}, {{page.year}} <strong>{{page.state}}</strong></h6>
+			</div>
+		{% endif %}
+		{% endfor %}	
+		<h3> Domestic Conference </h3>
+		{% for page in site.categories.publications %}
+		{% if page.type == "Domestic_confernece" %}
+			<div class="post-display">
+				<h6 id="{{ tag_name | slugify }}">{{page.author}}, <em>{{ page.title }}</em>, {{page.name}}, {{page.year}} <strong>{{page.state}}</strong></h6>
+			</div>
+		{% endif %}
+		{% endfor %}	
+		<h3> Workshop </h3>
+		{% for page in site.categories.publications %}
+		{% if page.type == "Workshop" %}
+			<div class="post-display">
+				<h6 id="{{ tag_name | slugify }}">{{page.author}}, <em>{{ page.title }}</em>, {{page.name}}, {{page.year}} <strong>{{page.state}}</strong></h6>
+			</div>
+		{% endif %}
+		{% endfor %}
+		<h3> Patent </h3>
+		{% for page in site.categories.publications %}
+		{% if page.type == "Patent" %}
+			<div class="post-display">
+				<h6 id="{{ tag_name | slugify }}">{{page.author}}, <em>{{ page.title }}</em>, {{page.name}}, {{page.year}} <strong>{{page.state}}</strong></h6>
+			</div>
+		{% endif %}
+		{% endfor %}	
+
+
+
 </div>
