--- a/_includes/displays/posts-flexslider.html
+++ b/_includes/displays/posts-flexslider.html
@@ -8,13 +8,13 @@
  <div>
 	<div class="flexslider flex-design">
 		<ul class="slides">
-			  {% for page in site.categories.blog limit: 5%}
+			  {% for page in site.categories.publications limit: 5%}
 	  		<li data-thumb="{{ page.image-slider }}">
 	  			<a href="{{ site.url}}{{ page.permalink }}">
 		    		<img src="{{ page.image-slider }}">
 		    		<hr>
 		    		<p class="flex-caption-title">{{ page.title }}</p>
-		    		<p class="flex-caption">{{ page.excerpt }}</p>
+		    		<p class="flex-caption"; style="text-align: left";>{{ page.excerpt }}</p>
 		    	</a>
 	 		</li>
 	  		{% endfor %}
