--- a/_includes/displays/projects-reveal.html
+++ b/_includes/displays/projects-reveal.html
@@ -16,7 +16,7 @@
 
         <a href="{{ site.url }}/{{ page.url }}">
             <div class="reveal-display-description">
-                <h1 class="reveal-display-title">{{ page.title }}</h1>
+                <p class="reveal-display-title"><span style="color: #ffffff;">{{ page.title }}</span></p>
 
                 <p class="reveal-display-text">{{ page.excerpt }}</p>
             </div>
