--- a/_layouts/post-basic.html
+++ b/_layouts/post-basic.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container">
     <div class="post-header">
-		<h1>{{ page.title }}</h1>
+		<h1><span style="color: #ffffff;">{{ page.title }}</span></h1>
 	    <time datetime="{{ page.date | date: "%-d %b %y" }}">{{ page.date | date: "%-d %b %y" }}</time>
 	    <br/>
 
