--- a/_includes/flexslider_video.html
+++ b/_includes/flexslider_video.html
@@ -10,7 +10,7 @@
 		<ul class="slides">
 	  		{% for item in page.sliderData limit: 5 %}
 	  		<li>
-				<iframe id="player_1" src="{{ item.video }}" width="960" height="540" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+				<iframe width="700" height="396" src="https://www.youtube.com/embed/H69kzO3Obdk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> 
 			</li>  
 			{% endfor %}
 		</ul>
