--- a/_includes/flexslider_video.html
+++ b/_includes/flexslider_video.html
@@ -10,9 +10,11 @@
 		<ul class="slides">
 	  		{% for item in page.sliderData limit: 5 %}
 	  		<li>
+				<!-- <iframe id="player_1" src="{{ item.video }}" width="960" height="540" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> -->
 				<iframe width="960" height="540" src="{{item.video}}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> 
 			</li>  
 			{% endfor %}
 		</ul>
 	</div>
 </div>
+
