--- a/_includes/flexslider_video.html
+++ b/_includes/flexslider_video.html
@@ -6,13 +6,9 @@
  -->
 
  <div>
-	<div class="flexslider">
-		<ul class="slides">
-	  		{% for item in page.sliderData limit: 5 %}
-				<!-- <iframe id="player_1" src="{{ item.video }}" width="960" height="540" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> -->
-				<iframe width="960" height="540" src="{{item.video}}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> 
-			{% endfor %}
-		</ul>
+	<div class="six columns images">
+		<div class="video-container">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/a1Yp0_OP7N0" frameborder="0" allowfullscreen></iframe>
+		</div>
 	</div>
 </div>
-
