--- a/_includes/projects/HQP-project_video.html
+++ b/_includes/projects/HQP-project_video.html
@@ -1,7 +1,7 @@
 <div class="row projects-display">
     <div class="six columns images">
         <div class="video-container">
-            <iframe width="560" height="315" src="http://www.youtube.com/embed/K8RnMAA0rg4" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/K8RnMAA0rg4" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
@@ -15,7 +15,7 @@
 <div class="row projects-display">
     <div class="six columns images">
         <div class="video-container">
-            <iframe width="560" height="315" src="http://www.youtube.com/embed/4efccbsBLI4" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/4efccbsBLI4" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
@@ -29,7 +29,7 @@
 <div class="row projects-display">
     <div class="six columns images">
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/a1Yp0_OP7N0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/JkTF-9RKoDM" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
