--- a/_includes/flexslider_video.html
+++ b/_includes/flexslider_video.html
@@ -1,14 +1,11 @@
-<!--
-    Flexslider
-    Brendan Thompson
-
-    A Flexslider displaying images and captions from the page's metadata
- -->
-
- <div>
-	<div class="six columns images">
-		<div class="video-container">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/a1Yp0_OP7N0" frameborder="0" allowfullscreen></iframe>
-		</div>
+<div>
+	<div class="flexslider">
+		<ul class="slides">
+	  		{% for item in page.sliderData limit: 5 %}
+	  		<li>
+				<iframe id="player_1" src="{{ item.video }}" width="960" height="540" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+			</li>  
+			{% endfor %}
+		</ul>
 	</div>
 </div>
