--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-
+{% include analytics.html %}
 {% include header.html %}
   <section id="about">
     {% include about.html %}
