--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include analytics.html %}
+  {% include google-analytics.html %}
   {% include head.html %}
 
   <body>
