--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,14 +3,15 @@
 		<div class="six columns">
 			<ul class="footer-list">
 	            <li><a href="{{ site.url }}">Home</a></li>
-	            <li><a href="{{ site.url }}/projects">Projects</a></li>
-	            
+				<li><a href="{{ site.url }}/projects">Projects</a></li>
+				<li><a href="{{ site.url }}/publications">Publications</a></li>	            
 	        </ul>
 		</div>
 		<div class="six columns">
 			<ul class="footer-list">
-						<li><a href="{{ site.url }}/publications">Publications</a></li>
-						<li><a href="https://github.com/ggory15">My Github</a></li>
+						<li><a href="{{ site.url }}/posts">Posts</a></li>
+						<li><a href="{{ site.url }}/implementations">Implementations</a></li>
+						<li><a href="https://github.com/ggory15">My Github</a></li>						
 	        </ul>
 		</div>
 </footer>
