--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,9 @@
       <div class="header-links">
         <a class="link" href="#about" data-scroll><strong>About Me</strong></a>
 	      <a class="link" href="#projects-featured" data-scroll><strong>Projects</strong></a>
-        <a class="link" href="#posts-recent" data-scroll><strong>Publications</strong></a>
+        <a class="link" href="#publications-recent" data-scroll><strong>Publications</strong></a>
+        <a class="link" href="#posts-recent" data-scroll><strong>Posts</strong></a>
+        <a class="link" href="#implementations-recent" data-scroll><strong>Implematations</strong></a>
         <!-- <a class="link" href="#projects" data-scroll>Softwares</a> -->
       </div>
   </div>
