--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -8,7 +8,6 @@ layout: page
   </section>
  
   <div class="container row">
-
       <!-- Projects Display -->
       <div class="six columns">
           <section id="projects-featured">
@@ -20,15 +19,39 @@ layout: page
           </section>
       </div>
   
-      <!-- Posts Display -->
+      <!-- Publicatioins Display -->
       <div class="six columns">
-          <section id="posts-recent">
+          <section id="publications-recent">
               <div class="home-title">
                   <h3>Recent Publications</h3>
               </div>
-              {% include displays/posts-flexslider.html %}
+              {% include displays/publications-flexslider.html %}
               <p class="button-style"><a href="{{ site.url }}/publications">See All Publications</a></p>
           </section>
       </div>
-  
   </div>
+
+  <div class="container row">
+    <!-- Projects Display -->
+    <div class="six columns">
+        <section id="posts-recent">
+            <div class="home-title">
+                <h3>Recent Posts</h3>
+            </div>
+            {% include displays/posts-flexslider.html %}
+            <p class="button-style"><a href="{{ site.url }}/posts">See All Posts</a></p>
+        </section>
+    </div>
+
+    <!-- Publicatioins Display -->
+    <div class="six columns">
+        <section id="implementations-recent">
+            <div class="home-title">
+                <h3>Recent Codes </h3>
+            </div>
+            {% include displays/imple-flexslider.html %}
+            <p class="button-style"><a href="{{ site.url }}/implementations">See All implementations</a></p>
+        </section>
+    </div>
+</div>
+
